# webflow-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: save_auth.py
src/: main.py  models.py  placeholder_resolver.py  playwright_executor.py  workflow_loader.py
tests/: __init__.py  test_main.py  test_models.py  test_placeholder_resolver.py  test_playwright_executor.py  test_playwright_executor_integration.py  test_save_auth.py  test_workflow_loader.py
