[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webflow-mcp"
version = "0.1.0"
description = "A generic MCP Server for automating web workflows using Playwright and YAML configuration"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Alejandro F. Platero", email = "alejandrof.platero@hotmail.com"}
]
license = {text = "MIT"}
keywords = ["mcp", "playwright", "automation", "workflow", "yaml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "playwright>=1.40.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "pylint>=2.0",
]

[project.urls]
Repository = "https://github.com/af-pr/webflow-mcp"
Issues = "https://github.com/af-pr/webflow-mcp/issues"

[project.scripts]
webflow-mcp = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pylint]
max-line-length = 100

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests requiring a real browser (deselect with '-m \"not integration\"')",
]
